--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "scrapling-mcp"
+name = "scrapling-fetch-mcp"
 version = "0.0.1"
-description = "MCP server for Scrapling. It's intended use-case is to fetch docs from URLs without getting blocked."
+description = "Simple URL fetcher MCP server for Scrapling. Retrieves HTML/markdown from automation-blocking sites with three protection levels."
 readme = "README.md"
 authors = [
     { name = "restlessronin", email = "88921269+restlessronin@users.noreply.github.com" },
@@ -12,14 +12,20 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
 ]
-dependencies = ["mcp>=1.3.0", "packaging>=24.1, <25.0", "scrapling>=0.2.96"]
+dependencies = [
+    "markdownify>=1.1.0",
+    "mcp>=1.3.0",
+    "packaging>=24.1, <25.0",
+    "readabilipy>=0.3.0",
+    "scrapling>=0.2.96",
+]
 
 [project.urls]
-"Homepage" = "https://github.com/cyberchitta/scrapling-mcp"
-"Bug Tracker" = "https://github.com/cyberchitta/scrapling-mcp/issues"
+"Homepage" = "https://github.com/cyberchitta/scrapling-fetch-mcp"
+"Bug Tracker" = "https://github.com/cyberchitta/scrapling-fetch-mcp/issues"
 
 [project.scripts]
-scrapling-mcp = "scrapling_mcp.mcp:run_server"
+scrapling-fetch-mcp = "scrapling_mcp.mcp:run_server"
 
 [build-system]
 requires = ["hatchling"]
