--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,10 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
+    "beautifulsoup4",
     "markdownify>=1.1.0",
     "mcp>=1.3.0",
     "packaging>=24.1, <25.0",
-    "readabilipy>=0.3.0",
     "scrapling>=0.2.96",
 ]
 
