--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "scrapling-fetch-mcp"
-version = "0.1.1"
+version = "0.1.2"
 description = "Simple URL fetcher MCP server for Scrapling. Retrieves HTML/markdown from automation-blocking sites with three protection levels."
 readme = "README.md"
 authors = [
@@ -30,3 +30,9 @@ scrapling-fetch-mcp = "scrapling_fetch_mcp.mcp:run_server"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build]
+include = ["src/**"]
+
+[tool.hatch.build.targets.wheel]
+sources = ["src"]
