--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "scrapling-fetch-mcp"
-version = "0.1.2"
-description = "Simple URL fetcher MCP server for Scrapling. Retrieves HTML/markdown from automation-blocking sites with three protection levels."
+version = "0.1.3"
+description = "Helps LLMs access bot-protected websites. An MCP server that fetches HTML/markdown content from sites with anti-automation defenses using Scrapling."
 readme = "README.md"
 authors = [
     { name = "restlessronin", email = "88921269+restlessronin@users.noreply.github.com" },
@@ -13,7 +13,8 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "beautifulsoup4",
+    "beautifulsoup4>=4.13.3",
+    "lxml>=5.3.1",
     "markdownify>=1.1.0",
     "mcp>=1.4.0",
     "packaging>=24.1, <25.0",
